--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ The solution is to allow named delivery methods.
 
 Here is an example using two named SMTP methods, and one sendmail method:
 
-  config.action_mailer.delivery_method = :named
+  config.action_mailer.delivery_method = :primary #Default
   config.action_mailer.named_settings = {
       :primary => {:method => :smtp, :settings => { ... }}
       :secondary => {:method => :smtp, :settings => { ... }},
@@ -17,10 +17,8 @@ Here is an example using two named SMTP methods, and one sendmail method:
 
 == Mailer configuration
 
-Note! You will have to set a default delivery method for all your mailers!
-
   class MyMailer < ActionMailer::Base
-    default :delivery_method => :primary # Default delivery method for all emails
+    default :delivery_method => :primary # Default for this mailer
     
     def first_mail
       # Will use :primary as delivery method
@@ -34,14 +32,13 @@ Note! You will have to set a default delivery method for all your mailers!
 
 == Things to consider
 
-* You have to specify a default delivery method for each mailer
 * If you use named delivery methods for one environment, you have to use it in all.
 * named_delivery_methods only supports the delivery methods recognized by the Mail gem.
-* You can not used any of the predefined names: :smtp, :sendmail, :file and :test.
+* You can not use any of the predefined names: :smtp, :sendmail, :file and :test.
 
 As an example, using the previous example, one would place this configuration in environments/test.rb:
 
-  config.action_mailer.delivery_method = :named
+  config.action_mailer.delivery_method = :primary
   config.action_mailer.named_settings = {
       :primary => {:method => :test}
       :secondary => {:method => :test},
@@ -52,7 +49,7 @@ As an example, using the previous example, one would place this configuration in
 
 Add this line to your Gemfile:
   
-  gem 'named_delivery_methods', '0.9', :git => 'git://github.com/danabr/named_delivery_methods.git'
+  gem 'named_delivery_methods', '0.9.1', :git => 'git://github.com/danabr/named_delivery_methods.git'
   
 == License
 
